Jupyter notebook presentation

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# zen
+/app/src/results
+
 # Created by https://www.toptal.com/developers/gitignore/api/pycharm,flask,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=pycharm,flask,visualstudiocode
 
