--- a/app/src/requirements.txt
+++ b/app/src/requirements.txt
@@ -109,3 +109,6 @@ webencodings==0.5.1
 websocket-client==1.5.2
 Werkzeug==2.3.4
 widgetsnbextension==4.0.7
+google-api-python-client
+google-auth-oauthlib 
+google-auth-httplib2
