--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ Flask==2.3.2
 Flask-MySQL==1.5.2
 fqdn==1.5.1
 idna==3.4
+importlib-metadata==6.6.0
 ipykernel==6.23.1
 ipython==8.14.0
 ipython-genutils==0.2.0
@@ -29,6 +30,7 @@ isoduration==20.11.0
 itsdangerous==2.1.2
 jedi==0.18.2
 Jinja2==3.1.2
+joblib==1.2.0
 jsonpointer==2.3
 jsonschema==4.17.3
 jupyter==1.0.0
@@ -48,10 +50,13 @@ nbclient==0.8.0
 nbconvert==7.4.0
 nbformat==5.9.0
 nest-asyncio==1.5.6
+networkx==3.1
 notebook==6.5.4
 notebook_shim==0.2.3
+numpy==1.24.3
 overrides==7.3.1
 packaging==23.1
+pandas==2.0.2
 pandocfilters==1.5.0
 parso==0.8.3
 pexpect==4.8.0
@@ -68,21 +73,28 @@ PyMySQL==1.0.3
 pyrsistent==0.19.3
 python-dateutil==2.8.2
 python-json-logger==2.0.7
+pytz==2023.3
 PyYAML==6.0
 pyzmq==25.1.0
 qtconsole==5.4.3
 QtPy==2.3.1
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+scikit-learn==1.2.2
+scipy==1.10.1
 Send2Trash==1.8.2
 six==1.16.0
+sklearn==0.0.post5
 sniffio==1.3.0
 soupsieve==2.4.1
 stack-data==0.6.2
 terminado==0.17.1
+threadpoolctl==3.1.0
 tinycss2==1.2.1
 tornado==6.3.2
 traitlets==5.9.0
+typing_extensions==4.6.3
+tzdata==2023.3
 uri-template==1.2.0
 wcwidth==0.2.6
 webcolors==1.13
@@ -90,3 +102,4 @@ webencodings==0.5.1
 websocket-client==1.5.2
 Werkzeug==2.3.4
 widgetsnbextension==4.0.7
+zipp==3.15.0
