--- a/requirements.txt
+++ b/requirements.txt
@@ -99,3 +99,5 @@ webencodings==0.5.1
 websocket-client==1.5.2
 Werkzeug==2.3.4
 widgetsnbextension==4.0.7
+python-decouple == 3.8
+python-dotenv == 1.0.0
